Remove DCHECK on CreateTrialsFromSwitchValue failures.

This DCHECK is hit in utility processes during test_installer
runs. The attempt to duplicate the parent proc's handle in
DeserializeSharedMemoryHandleMetadata fails because the browser
process is being torn down.

BUG=916389,916461
R=asvitkine@chromium.org

Change-Id: I27c03717c0272bdf309f78e0a1724d7d0f205c57
Reviewed-on: https://chromium-review.googlesource.com/c/1384025
Commit-Queue: Alexei Svitkine <asvitkine@chromium.org>
Reviewed-by: Alexei Svitkine <asvitkine@chromium.org>
Cr-Commit-Position: refs/heads/master@{#618539}
Former-commit-id: a8f33aee59bc7840fedcd7e169acb487ed75da7b